# joining_experiment

./: CMakeLists.txt  package.xml  quat.txt  record.sh  servo_publish.txt
config/: servo-config-gen3.yaml  servo_config.yaml  servo_config_real.yaml
launch/: gen3_joining_servo.launch  image_filter.launch  jacobian.launch  joining_servo.launch  joining_servo_real.launch  joining_test.launch  realgen3_joining_servo.launch  test_servo.launch  tracking_test.launch
msg/: JoinPose.msg  Object.msg
src/: cv.py  end_effector_vis.py  filter_test.py  find_putty.py  finger_pos.py  get_finger_pose.py  get_join_target_pose.py  get_target.py  go_to_target.py  jacobian.py  joining.py  joint_publisher.py  kortex_hack.py  pid_tuning.py  pose_tracking.cpp  servo_pose_tracking.py  test.py  test2.py  text_to_speech.py  track.py
src/testing/: servo-testing.py
